Issue#159 UI - Library and course card title alignment issue fix

--- a/src/app/client/src/assets/styles/base/_typography.scss
+++ b/src/app/client/src/assets/styles/base/_typography.scss
@@ -193,7 +193,11 @@ a {
     color: $gray-400;
   }
 }
-
+.sb-categories-title {
+  color: var(--gray-800);
+  font-size:calculateRem(18px);
+  font-weight: bold;
+}
 .sb__ellipsis {
   /* autoprefixer: off */
   -webkit-box-orient: vertical;
